remove file plupload (non-attached only right now); fixed write_in_pi visibility on form init; added selected to who_is_pi drop down, if in list

--- a/includes/css/cafnr-intl.css
+++ b/includes/css/cafnr-intl.css
@@ -5,7 +5,7 @@
  *
 */
 
-.no-title, #newfacultydiv, .write-in-pi {
+.no-title, #newfacultydiv {
 	display:none;
 }
 .delete_supplemental_link, .delete_collaborating {
@@ -14,4 +14,10 @@
 }
 .hidden-on-init {
 	display:none;
+}
+
+#cafnr_activity_upload {
+	background-color: #eaeaea;
+	margin: 1em;
+    padding: 1px 1.5em;
 }
