--- a/includes/css/cafnr-intl.css
+++ b/includes/css/cafnr-intl.css
@@ -21,3 +21,15 @@
 	margin: 1em;
     padding: 1px 1.5em;
 }
+
+#cafnr_upload_list h2{
+	font-weight:700;
+}
+.gform_wrapper #cafnr_upload_list ul li {
+	list-style: disc outside none;
+	padding-left:1%;
+	padding-bottom:1%;
+}
+.gform_wrapper #cafnr_upload_list ul {
+	padding-left:2%;
+}
