--- a/includes/css/cafnr-intl.css
+++ b/includes/css/cafnr-intl.css
@@ -65,6 +65,9 @@ a.reload-page {
 	color: #339;
 }
 
+.entry-content table#activity-search.mu-table{
+	margin-bottom: 4em;
+}
 .mu-table thead, .mu-table th {
 	background-color: #F1B82D;
 }
@@ -104,7 +107,16 @@ a.reload-page {
 	padding: 12px;
 	border-bottom:1px solid #ededed;
 }
-
+.mu-table td.strong{
+	font-weight:bold;
+}
+.mu-table tr.quick-view-tr{
+	border:none;
+}
+.mu-table tr.quick-view-tr td{
+	border:none;
+	padding-left:2em;
+}
 
 
 
