added 'add faculty' page and seperate sub tab for admins/mods; added faculty drop down in 'Add activity' if !user_id set in url params, for admins/mods; added js for changed hidden user_id based on faculty dropdown on activity form (if admins/mods); added STOP to activity form submission if admin/mod and no faculty selected

--- a/includes/css/cafnr-intl.css
+++ b/includes/css/cafnr-intl.css
@@ -19,6 +19,11 @@ a.reload-page {
 	cursor:pointer;
 }
 
+.user-msg{
+	font-weight:bold;
+	color:red;
+}
+
 #cafnr_activity_upload {
 	background-color: #eaeaea;
 	margin: 1em;
