php functions to support searching posts by country; added to js activitySearch function to handle searching by country, add error message if no search terms entered; finished js function to parse country codes into name for search dropdown

--- a/includes/css/cafnr-intl.css
+++ b/includes/css/cafnr-intl.css
@@ -23,6 +23,9 @@ a.reload-page {
 	font-weight:bold;
 	color:red;
 }
+.greyed{
+	color:#666666;
+}
 
 #cafnr_activity_upload {
 	background-color: #eaeaea;
