adding postmeta to faculty engagement table (for quick view); max width on quickview tds, no more jumping plz

--- a/includes/css/cafnr-intl.css
+++ b/includes/css/cafnr-intl.css
@@ -124,6 +124,11 @@ a.reload-page {
 .mu-table tr.quick-view-tr td{
 	border:none;
 	padding-left:2em;
+	max-width:500px;
+}
+
+a#submit-activity-search{
+	cursor:pointer;
 }
 
 
