changes to activity form per Chris F - remove red text, replace asterisks with 'required' text, added 'optional questions' area replaces 'activity' w 'engagement' on intake form in all places?  I hope?

--- a/includes/css/cafnr-intl.css
+++ b/includes/css/cafnr-intl.css
@@ -185,3 +185,8 @@ body.loading .modal {
 .hidden{
 	display: none;
 }
+
+#cafnr_activity_form .required, 
+#cafnr_activity_form .gfield_required {
+	color:#211f1f !important;
+}
