updates to engagement table
- quick view wasn't following original row when sorted.

--- a/includes/css/cafnr-intl.css
+++ b/includes/css/cafnr-intl.css
@@ -169,6 +169,7 @@ input#activity-submit{
 }
 .mu-table thead, .mu-table th {
 	background-color: #f8d889;
+	border-bottom:2px solid #cccccc;
 }
 .mu-table thead tr .header{
 	background-image: url("../im/bg.gif");
